[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Event_Manager/Event_Manager.gd" type="Script" id=1]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/VersionLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_newValue.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_deleteKey.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/Database_Manager/Theme and Style/main_25.tres" type="Theme" id=8]

[node name="Event_Manager" type="Control" groups=["Database", "Tab"]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="VBox1" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
margin_right = 900.0
margin_bottom = 25.0

[node name="RefreshData" type="Button" parent="VBox1/HBox1"]
margin_right = 97.0
margin_bottom = 25.0
text = "Reset Values"

[node name="Center1" type="CenterContainer" parent="VBox1/HBox1"]
margin_left = 101.0
margin_right = 527.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox1/HBox1/Center1"]
visible = false
margin_left = 48.0
margin_right = 377.0
margin_bottom = 25.0
text = "CHANGES HAVE BEEN MADE BUT NOT SAVED"

[node name="SaveChanges" type="Button" parent="VBox1/HBox1"]
margin_left = 531.0
margin_right = 644.0
margin_bottom = 25.0
text = "Save Changes"

[node name="Label" type="Label" parent="VBox1/HBox1"]
margin_left = 648.0
margin_right = 663.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="Label2" type="Label" parent="VBox1/HBox1"]
visible = false
margin_left = 784.0
margin_right = 799.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="AddNewItem" type="Button" parent="VBox1/HBox1"]
margin_left = 667.0
margin_right = 782.0
margin_bottom = 25.0
text = "Add New Event"

[node name="Label3" type="Label" parent="VBox1/HBox1"]
margin_left = 786.0
margin_right = 801.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="DeleteSelectedItem" type="Button" parent="VBox1/HBox1"]
margin_left = 805.0
margin_right = 900.0
margin_bottom = 25.0
text = "Delete Event"

[node name="Cancel" type="Button" parent="VBox1/HBox1"]
visible = false
margin_left = 845.0
margin_right = 900.0
margin_bottom = 25.0
text = "Cancel"

[node name="Label4" type="Label" parent="VBox1/HBox1"]
visible = false
margin_left = 784.0
margin_right = 799.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="HBox2" type="HBoxContainer" parent="VBox1"]
margin_top = 29.0
margin_right = 900.0
margin_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -5

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2"]
margin_right = 175.0
margin_bottom = 542.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table_Buttons" type="VBoxContainer" parent="VBox1/HBox2/Scroll1"]
margin_right = 175.0
margin_bottom = 542.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll2" type="ScrollContainer" parent="VBox1/HBox2"]
margin_left = 170.0
margin_right = 900.0
margin_bottom = 542.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel1" type="PanelContainer" parent="VBox1/HBox2/Scroll2"]
margin_right = 730.0
margin_bottom = 542.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBox1/HBox2/Scroll2/Panel1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 723.0
margin_bottom = 535.0
color = Color( 0, 0, 0, 0.0823529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbox3" type="HBoxContainer" parent="VBox1"]
margin_top = 575.0
margin_right = 900.0
margin_bottom = 600.0
size_flags_horizontal = 3
alignment = 1

[node name="VersionLabel" parent="VBox1/Hbox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 205.0
margin_right = 695.0
margin_bottom = 25.0

[node name="Popups" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 250 )
color = Color( 0, 0, 0, 0.894118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup_delete_confirm" type="Popup" parent="Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -50.0
margin_right = 116.5
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="ColorRect" parent="Popups/popup_delete_confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
margin_right = 233.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
visible = false
margin_right = 271.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 233.0
margin_bottom = 100.0

[node name="Accept" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 114.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 233.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Cancel"

[node name="popup_newValue" parent="Popups" instance=ExtResource( 6 )]

[node name="input_templateBuffer" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text" index="2"]
margin_top = 122.0

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection" index="1"]
text = "Text"
items = [ "Text", null, false, 0, null, "List", null, false, 1, null, "Input Control", null, false, 2, null, "Number Range", null, false, 3, null, "Sound Effect", null, false, 4, null, "Whole Number", null, false, 5, null, "Decimal Number", null, false, 6, null, "True or False", null, false, 7, null, "Dropdown List", null, false, 8, null, "Icon Display", null, false, 9, null, "Scene Path", null, false, 10, null, "Sprite", null, false, 11, null, "Vector 2 or 3", null, false, 12, null ]

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection" index="1"]
text = "Character Classes"
items = [ "Character Classes", null, false, 0, null, "Control Categories", null, false, 1, null, "DataTypes", null, false, 2, null, "Field_Pref_Values", null, false, 3, null, "Item_Type", null, false, 4, null, "Items", null, false, 5, null, "Maps", null, false, 6, null ]

[node name="popup_deleteKey" parent="Popups" instance=ExtResource( 7 )]

[node name="Label" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="0"]
margin_bottom = 25.0

[node name="Itemlist" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="1"]
margin_top = 29.0
margin_bottom = 207.0
items = [ "Nestor", null, false, "Hilda", null, false ]

[node name="HBoxContainer" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="2"]
margin_top = 211.0

[node name="Accept" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer" index="0"]
margin_bottom = 25.0

[node name="Cancel" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer" index="1"]
margin_bottom = 25.0

[node name="ListInput" type="Control" parent="Popups"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FileSelect" type="Control" parent="Popups"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="VBox1/HBox1/RefreshData" to="." method="_on_RefreshData_button_up"]
[connection signal="button_up" from="VBox1/HBox1/SaveChanges" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="VBox1/HBox1/AddNewItem" to="." method="_on_AddNewItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/DeleteSelectedItem" to="." method="_on_DeleteSelectedItem_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Event 1" to="VBox1/HBox2/Scroll1/Table_Buttons/Event 1" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Event 2" to="VBox1/HBox2/Scroll1/Table_Buttons/Event 2" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Event 3" to="VBox1/HBox2/Scroll1/Table_Buttons/Event 3" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Event 4" to="VBox1/HBox2/Scroll1/Table_Buttons/Event 4" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Event 5" to="VBox1/HBox2/Scroll1/Table_Buttons/Event 5" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Event 6" to="VBox1/HBox2/Scroll1/Table_Buttons/Event 6" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Main Quest pt1" to="VBox1/HBox2/Scroll1/Table_Buttons/Main Quest pt1" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Main Quest pt2" to="VBox1/HBox2/Scroll1/Table_Buttons/Main Quest pt2" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Main Quest pt3" to="VBox1/HBox2/Scroll1/Table_Buttons/Main Quest pt3" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_deletePopup_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on__deletePopup_Cancel_button_up"]
[connection signal="button_up" from="Popups/popup_newValue/PanelContainer/VBox1/HBox2/Accept" to="." method="_on_NewField_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_newValue/PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_NewField_Cancel_button_up"]
[connection signal="item_selected" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" to="." method="_on_Itemlist_item_selected"]
[connection signal="button_up" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_DeleteField_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_DeleteField_Cancel_button_up"]

[editable path="Popups/popup_newValue"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection"]
[editable path="Popups/popup_deleteKey"]
